...
                    if viewModel.showClosedProjects == false {
                        Button {
                            withAnimation {
                                viewModel.addItem(to: project)
                            }
                        } label: {
                            Label("Add New Item", systemImage: "plus")
                        }
                        .buttonStyle(ImageButtonStyle())
                    }
                }
                .disableCollapsing() // needed for macOS - see PlatformAdjustments.swift
            }
...
                Button {
                    withAnimation {
                        viewModel.addProject()
                    }
                } label: {
                    // Label View will be placed automatically depending on the platform
                    Label("Add Section", systemImage: "plus")
                }
            }
        }
    }

    var sortOrderToolbarItem: some ToolbarContent {
...
